# Teaching-HEIGVD-AMT-2016-Gamification/spring-server/src/main/resources/api-spec.yaml
@@ -14,6 +14,31 @@ consumes:
 produces:
   - application/json
 paths:
+
+#-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
+# event
+#-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-  
+  /events:
+    post:
+      parameters:
+        - name: event
+          in: body
+          description: The info required to create an event
+          schema:
+            $ref: '#/definitions/EventPost'
+          required: true
+        - name: token
+          in: header
+          type: string
+          description: token
+          required: true
+
+      responses:
+        201:
+          description: Make a new event
+#-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
+# badge
+#-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-  
   /badges:
     get:
       responses:
@@ -91,7 +116,9 @@ paths:
       responses:
         200:
           description: Delete the badge with badge id
-          
+#-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
+# application
+#-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-          
   /applications:
     get:
       responses:
@@ -165,7 +192,7 @@ paths:
         200:
           description: Delete the application with badge id
   
-  /applications/{id}/{idBadge}:
+  /applications/{id}/badges/{idBadge}:
     get:
       parameters:
         - name: id
@@ -188,7 +215,27 @@ paths:
             type: object
             items:
               $ref: '#/definitions/BadgeGet'
-          
+              
+  /applications/{id}/events:
+    get:
+      parameters:
+        - name: id
+          in: path
+          type: integer
+          format: int64
+          description: id of the application
+          required: true
+      responses:
+        200:
+          description: Sends all the event of the app defined by app id
+          schema:
+            title: Event
+            type: object
+            items:
+              $ref: '#/definitions/ApplicationEventGet'
+#-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
+# login
+#-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-  
   /login:
     post:
       parameters:
@@ -207,19 +254,253 @@ paths:
             items:
               $ref: '#/definitions/LoginGet'
               
-  /levels:
+#-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
+# pointScale
+#-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-            
+  /pointScales:
+    post:
+      parameters:
+        - name: pointScale
+          in: body
+          description: The info required to create a pointScale
+          schema:
+            $ref: '#/definitions/pointScalePost'
+          required: true
+        - name: token
+          in: header
+          type: string
+          description: token
+      responses:
+        201:
+          description: Make a new pointScale
+  
     get:
       responses:
         200:
-          description:  List all badges
+          description:  List all pointscale
           schema:
-            title: Badges
+            title: pointscale
             type: array
             items:
-              $ref: '#/definitions/BadgeGet'
+              $ref: '#/definitions/pointScaleGet'
+              
+  /pointScales/{id}:
+    get:
+      parameters:
+        - name: id
+          in: path
+          type: integer
+          format: int64
+          description: id of the pointScale
+          required: true
+      responses:
+        200:
+          description: Sends the pointScale with pointScale id
+          schema:
+            title: pointScale
+            type: object
+            items:
+              $ref: '#/definitions/pointScaleGet'
+    put:
+      parameters:
+        - name: id
+          in: path
+          type: integer
+          format: int64
+          description: id of the pointScale to modify
+          required: true
+        - name: pointScale
+          in: body
+          description: The new values for an existing pointScale
+          schema:
+            $ref: '#/definitions/pointScalePost'
+          required: true
+      responses:
+        200:
+          description: Sends the modified pointScale id
+          schema:
+            title: pointScale
+            type: object
+            items:
+              $ref: '#/definitions/pointScaleGet'
+    delete:
+      parameters:
+        - name: id
+          in: path
+          type: integer
+          format: int64
+          description: id of the pointScale to delete
+          required: true
+      responses:
+        200:
+          description: Delete the pointScale with badge id
+#-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
+# rule
+#-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-            
+  /rules:
+    post:
+      parameters:
+        - name: rule
+          in: body
+          description: The info required to create a rule
+          schema:
+            $ref: '#/definitions/rulePost'
+          required: true
+        - name: token
+          in: header
+          type: string
+          description: token
+      responses:
+        201:
+          description: Make a new rule
+  
+    get:
+      responses:
+        200:
+          description:  List all rules
+          schema:
+            title: rule
+            type: array
+            items:
+              $ref: '#/definitions/ruleGet'
+              
+  /rules/{id}:
+    get:
+      parameters:
+        - name: id
+          in: path
+          type: integer
+          format: int64
+          description: id of the rule
+          required: true
+      responses:
+        200:
+          description: Sends the rule with rule id
+          schema:
+            title: rule
+            type: object
+            items:
+              $ref: '#/definitions/ruleGet'
+    put:
+      parameters:
+        - name: id
+          in: path
+          type: integer
+          format: int64
+          description: id of the rule to modify
+          required: true
+        - name: rule
+          in: body
+          description: The new values for an existing rule
+          schema:
+            $ref: '#/definitions/rulePost'
+          required: true
+      responses:
+        200:
+          description: Sends the modified rule id
+          schema:
+            title: rule
+            type: object
+            items:
+              $ref: '#/definitions/ruleGet'
+    delete:
+      parameters:
+        - name: id
+          in: path
+          type: integer
+          format: int64
+          description: id of the rule to delete
+          required: true
+      responses:
+        200:
+          description: Delete the rule with badge id
+
 
 
 definitions:
+#-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=- 
+# pointScale
+#-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-  
+
+  ruleGet:
+    type: object
+    properties:
+      applicationId:
+        type: integer
+        format: int64
+      applicationName:
+        type: string
+      eventType:
+        type: string
+      awardBadge:
+        type: boolean
+      awardPoint:
+        type: boolean
+      ruleValue:
+        type: integer
+        format: int64
+      
+      
+  
+  rulePost:
+    type: object
+    properties:
+      eventType:
+        type:  string
+      awardBadge:
+        type: boolean
+      awardPoint:
+        type: boolean
+      ruleValue:
+        type: integer
+        format: int64
+
+#-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
+# pointScale
+#-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-  
+  pointScalePost:
+    type: object
+    properties:
+      name:
+        type: string
+
+  pointScaleGet:
+    type: object
+    properties:
+      id:
+        type: integer
+        format: int64
+    
+#-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
+# event
+#-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-         
+  EventGet:
+    type: object
+    properties:
+      id:
+        type: integer
+        format: int64
+      userExtAppId:
+        type: integer
+        format: int64
+      eventType:
+        type: string
+      userId:
+        type: integer
+        format: int64
+
+  EventPost:
+    type: object
+    properties:
+      userAppId:
+        type: integer
+        format: int64
+      eventType:
+        type: string
+      
+#-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
+# Login
+#-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
   LoginGet:
     type: object
     properties:
@@ -235,7 +516,9 @@ definitions:
       password:
         type: string
 
-
+#-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
+# Badge
+#-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
   BadgeGet:
     type: object
     properties:
@@ -258,7 +541,9 @@ definitions:
         type: string
       icon:
         type: string
-        
+#-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-
+# Application
+#-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-=-   
   ApplicationGet:
     type: object
     properties:
@@ -283,3 +568,12 @@ definitions:
         type: string
       description:
         type: string
+        
+  ApplicationEventGet:
+    type: object
+    properties:
+      eventList:
+        type: array
+        items:
+          type: object   
+          
